--- a/aavelabyrintti/pyproject.toml
+++ b/aavelabyrintti/pyproject.toml
@@ -12,6 +12,7 @@ pygame = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+coverage = "^6.5.0"
 
 [build-system]
 requires = ["poetry-core"]
