--- a/aavelabyrintti/pyproject.toml
+++ b/aavelabyrintti/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 pygame = "^2.1.2"
+invoke = "^1.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
