--- a/aavelabyrintti/pyproject.toml
+++ b/aavelabyrintti/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.8"
 pygame = "^2.1.2"
 invoke = "^1.7.3"
+pygame-textinput = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
