--- a/aavelabyrintti/.coveragerc
+++ b/aavelabyrintti/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src
-omit = src/**/__init__.py,src/tests/**,src/entities/**, src/images/**,src/index.py
+omit = src/**/__init__.py,src/tests/**,src/entities/**, src/images/**,src/index.py,src/init_db.py,src/db.py
